# beta-kernel-reproduce-paper

./: .gitignore  KDE.py  KDE_Gauss.py  LICENSE  README.md  ablation_analysis.py  ablation_study.py  experiment_1_csv_export.py  experiment_1_parallell.py  experiment_1_plot.py  experiment_1_tables.py  experiment_2.py  experiment_2_csv_export.py  experiment_2_plot.py  experiment_2_table.py  experiment_2_table_appendix.py  kernel_shape_plot.py  pyproject.toml  reproduce_all.py  requirements.txt
data/experiment2/: experiment_2_summary.csv
data/experiment2/per_fold/: experiment_2_per_fold_results.csv
output/supplementary/: supplementary_experiment_1_results.csv  supplementary_experiment_2_results.csv
scripts/: _paths.py
scripts/export/: export_experiment_1.py  export_experiment_2.py
scripts/plot/: _plot_styles.py  plot_ablation.py  plot_experiment_1.py  plot_experiment_2.py  plot_kernel_shapes.py
scripts/run/: run_ablation_study.py  run_experiment_1.py  run_experiment_2.py
scripts/tables/: table_ablation.py  table_experiment_2.py  tables_experiment_1.py  tables_experiment_2_appendix.py
