[project]
name = "beta-kernel-reproduce-paper"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "jinja2==3.1.6",
    "matplotlib==3.10.8",
    "matplotlib-inline==0.2.1",
    "numpy==2.4.3",
    "pandas==3.0.1",
    "scikit-learn==1.8.0",
    "scipy==1.17.1",
    "seaborn==0.13.2",
    "tabulate==0.10.0",
    "tqdm==4.67.3",
    "ucimlrepo==0.0.7",
]
